--- a/src/main/resources/templates/mainpage.html
+++ b/src/main/resources/templates/mainpage.html
@@ -10,6 +10,7 @@
     <title>Image Header Template for Bootstrap</title>
     <link href="./dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="./dist/css/header.css" rel="stylesheet"/>
+    <link href="./dist/css/style.css" rel="stylesheet"/>
 </head>
 <body class="body-top">
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -46,7 +47,7 @@
     <div class="row">
         <!--<div class="col-md-4 col-md-offset-4">-->
         <div class="col-md-6 col-md-offset-3">
-            <form class="form-horizontal" role="form" action="#" th:action="@{/order}" th:object="${order}" method="post" target="_blank">
+            <form class="form-horizontal" role="form" action="#" th:action="@{/order}" th:object="${order}" method="post" target="_blank" id="form-order">
             <!--<form class="form-horizontal" role="form"  action="/order" method="post" modelAttribute="dtoOrder">-->
                 <fieldset>
 
@@ -57,7 +58,7 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">Номер:</label>
                         <div class="col-md-9">
-                            <input type="text" id="paymentOrderNum" placeholder="Номер поручения" class="form-control" th:field="*{paymentOrderNum}"   readonly="readonly"/>
+                            <input type="text" name="orderNum" id="paymentOrderNum" placeholder="Номер поручения" class="form-control" th:field="*{paymentOrderNum}"/>
                         </div>
                     </div>
 
@@ -65,7 +66,7 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">Сумма:</label>
                         <div class="col-md-9">
-                            <input type="text" id="payerSumQuant" placeholder="Сумма цифрами" class="form-control" th:field="*{payerSumQuant}"   readonly="readonly"/>
+                            <input type="text" id="payerSumQuant" placeholder="Сумма цифрами" class="form-control" th:field="*{payerSumQuant}"  name="payerSumQuant"/>
                         </div>
                     </div>
 
@@ -77,14 +78,14 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">ИНН:</label>
                         <div class="col-md-4">
-                            <input type="text" id="payerINN" placeholder="ИНН" class="form-control" th:field="*{payerINN}" readonly="readonly"/>
+                            <input type="text" id="payerINN" placeholder="ИНН" class="form-control" th:field="*{payerINN}"/>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-md-3 control-label" >КПП:</label>
                         <div class="col-md-4">
-                            <input type="text" id="payerKPP" placeholder="КПП" class="form-control" th:field="*{payerKPP}" readonly="readonly"/>
+                            <input type="text" id="payerKPP" placeholder="КПП" class="form-control" th:field="*{payerKPP}"/>
                         </div>
                     </div>
 
@@ -93,7 +94,7 @@
                         <label class="col-md-3 control-label">Плательщик:</label>
                         <div class="col-md-9">
                             <textarea class="form-control" id="payerCompanyName" name="message" placeholder="Наименование плательщика"
-                                      rows="3" th:field="*{payerCompanyName}" readonly="readonly"></textarea>
+                                      rows="3" th:field="*{payerCompanyName}"></textarea>
                         </div>
                     </div>
 
@@ -101,7 +102,7 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">Сч. №:</label>
                         <div class="col-md-9">
-                            <input type="text" id="payerAccount" class="form-control" th:field="*{payerAccount}" readonly="readonly"/>
+                            <input type="text" id="payerAccount" class="form-control" th:field="*{payerAccount}"/>
                         </div>
                     </div>
 
@@ -110,7 +111,7 @@
                         <label class="col-md-3 control-label">Банк плательщика:</label>
                         <div class="col-md-9">
                             <textarea class="form-control" id="payerBankName" name="message" placeholder="Реквизиты банка получателя"
-                                      rows="3" th:field="*{payerBankName}" readonly="readonly"></textarea>
+                                      rows="3" th:field="*{payerBankName}"></textarea>
                         </div>
                     </div>
 
@@ -118,7 +119,7 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">БИК:</label>
                         <div class="col-md-9">
-                            <input type="text" placeholder="БИК" id="payerBankBIK" class="form-control" th:field="*{payerBankBIK}" readonly="readonly"/>
+                            <input type="text" placeholder="БИК" id="payerBankBIK" class="form-control" th:field="*{payerBankBIK}"/>
                         </div>
                     </div>
 
@@ -126,7 +127,7 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">Сч. №:</label>
                         <div class="col-md-9">
-                            <input type="text" id="payerBankAccount" class="form-control" th:field="*{payerBankAccount}" readonly="readonly"/>
+                            <input type="text" id="payerBankAccount" class="form-control" th:field="*{payerBankAccount}"/>
                         </div>
                     </div>
 
@@ -138,13 +139,13 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">ИНН:</label>
                         <div class="col-md-4">
-                            <input type="text" id="recipientINN" placeholder="ИНН" class="form-control" th:field="*{recipientINN}" readonly="readonly"/>
+                            <input type="text" id="recipientINN" placeholder="ИНН" class="form-control" th:field="*{recipientINN}"/>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-md-3 control-label">КПП:</label>
                         <div class="col-md-4">
-                            <input type="text" id="recipientKPP" placeholder="КПП" class="form-control" th:field="*{recipientKPP}" readonly="readonly"/>
+                            <input type="text" id="recipientKPP" placeholder="КПП" class="form-control" th:field="*{recipientKPP}"/>
                         </div>
                     </div>
 
@@ -154,7 +155,7 @@
                         <label class="col-md-3 control-label">Плательщик:</label>
                         <div class="col-md-9">
                             <textarea class="form-control" id="recipientCompanyName" name="message" placeholder="Наименование плательщика"
-                                      rows="3" th:field="*{recipientCompanyName}" readonly="readonly"></textarea>
+                                      rows="3" th:field="*{recipientCompanyName}"></textarea>
                         </div>
                     </div>
 
@@ -162,7 +163,7 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">Сч. №:</label>
                         <div class="col-md-9">
-                            <input type="text" id="recipientBankAccount" class="form-control" th:field="*{recipientBankAccount}" readonly="readonly"/>
+                            <input type="text" id="recipientBankAccount" class="form-control" th:field="*{recipientBankAccount}"/>
                         </div>
                     </div>
 
@@ -171,7 +172,7 @@
                         <label class="col-md-3 control-label">Банк плательщика:</label>
                         <div class="col-md-9">
                             <textarea class="form-control" id="recipientBankName" name="message" placeholder="Реквизиты банка получателя"
-                                      rows="3" th:field="*{recipientBankName}" readonly="readonly"></textarea>
+                                      rows="3" th:field="*{recipientBankName}"></textarea>
                         </div>
                     </div>
 
@@ -179,7 +180,7 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">БИК:</label>
                         <div class="col-md-9">
-                            <input type="text" id="recipientBankBIK" placeholder="БИК" class="form-control" th:field="*{recipientBankBIK}" readonly="readonly"/>
+                            <input type="text" id="recipientBankBIK" placeholder="БИК" class="form-control" th:field="*{recipientBankBIK}"/>
                         </div>
                     </div>
 
@@ -187,7 +188,7 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">Сч. №:</label>
                         <div class="col-sm-9">
-                            <input type="text" id="recipientAccount" class="form-control" th:field="*{recipientAccount}" readonly="readonly"/>
+                            <input type="text" id="recipientAccount" class="form-control" th:field="*{recipientAccount}"/>
                         </div>
                     </div>
 
@@ -196,7 +197,7 @@
                         <label class="col-md-3 control-label">Назначение платежа:</label>
                         <div class="col-md-9">
                             <textarea class="form-control" id="paymentOrderPurpose" name="message" placeholder="Назначение платежа"
-                                      rows="3" th:field="*{paymentOrderPurpose}" readonly="readonly"></textarea>
+                                      rows="3" th:field="*{paymentOrderPurpose}"></textarea>
                         </div>
                     </div>
 
@@ -220,7 +221,8 @@
 <script src="./dist/js/bootstrap.min.js"></script>
 <script src="./js/jquery-3.2.1.min.js" type="application/javascript"></script>
 <script src="./js/custom.js" type="application/javascript"></script>
-<!--<script src="./js/jquery.mask.js" type="application/javascript"></script>-->
-<script src="./js/jquery.maskedinput.js" type="application/javascript"></script>
+<script src="./js/jquery.mask.js" type="application/javascript"></script>
+<script src="./js/jquery.validate.js" type="application/javascript"></script>
+<!---<script src="./js/jquery.maskedinput.js" type="application/javascript"></script>-->
 </body>
 </html>
