--- a/src/main/resources/templates/mainpage.html
+++ b/src/main/resources/templates/mainpage.html
@@ -9,6 +9,8 @@
     <link rel="shortcut icon" href="http://getbootstrap.com/assets/ico/favicon.ico"/>
     <title>Image Header Template for Bootstrap</title>
     <link href="./dist/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="./dist/css/bootstrap-theme.min.css" rel="stylesheet"/>
+    <link href="./dist/css/bootstrapValidator.min.css" rel="stylesheet"/>
     <link href="./dist/css/header.css" rel="stylesheet"/>
     <link href="./dist/css/style.css" rel="stylesheet"/>
 </head>
@@ -47,7 +49,8 @@
     <div class="row">
         <!--<div class="col-md-4 col-md-offset-4">-->
         <div class="col-md-6 col-md-offset-3">
-            <form class="form-horizontal" role="form" action="#" th:action="@{/order}" th:object="${order}" method="post" target="_blank" id="form-order">
+            <form class="form-horizontal" role="form" action="#" th:action="@{/order}" th:object="${order}"
+                  method="post" target="_blank" id="form-order">
             <!--<form class="form-horizontal" role="form"  action="/order" method="post" modelAttribute="dtoOrder">-->
                 <fieldset>
 
@@ -58,7 +61,8 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">Номер:</label>
                         <div class="col-md-9">
-                            <input type="text" name="orderNum" id="paymentOrderNum" placeholder="Номер поручения" class="form-control" th:field="*{paymentOrderNum}"/>
+                            <input type="text" name="paymentOrderNum" id="paymentOrderNum" placeholder="Номер поручения"
+                                   class="form-control" th:field="*{paymentOrderNum}"/>
                         </div>
                     </div>
 
@@ -66,7 +70,8 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">Сумма:</label>
                         <div class="col-md-9">
-                            <input type="text" id="payerSumQuant" placeholder="Сумма цифрами" class="form-control" th:field="*{payerSumQuant}"  name="payerSumQuant"/>
+                            <input type="text" name="payerSumQuant" id="payerSumQuant" placeholder="Сумма цифрами"
+                                   class="form-control" th:field="*{payerSumQuant}"/>
                         </div>
                     </div>
 
@@ -77,15 +82,17 @@
                     <!-- Text input-->
                     <div class="form-group">
                         <label class="col-md-3 control-label">ИНН:</label>
-                        <div class="col-md-4">
-                            <input type="text" id="payerINN" placeholder="ИНН" class="form-control" th:field="*{payerINN}"/>
+                        <div class="col-md-6">
+                            <input type="text" name="payerINN" id="payerINN" placeholder="ИНН" class="form-control"
+                                   th:field="*{payerINN}"/>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <label class="col-md-3 control-label" >КПП:</label>
-                        <div class="col-md-4">
-                            <input type="text" id="payerKPP" placeholder="КПП" class="form-control" th:field="*{payerKPP}"/>
+                        <div class="col-md-6">
+                            <input type="text" name="payerKPP" id="payerKPP" placeholder="КПП" class="form-control"
+                                   th:field="*{payerKPP}"/>
                         </div>
                     </div>
 
@@ -93,8 +100,8 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">Плательщик:</label>
                         <div class="col-md-9">
-                            <textarea class="form-control" id="payerCompanyName" name="message" placeholder="Наименование плательщика"
-                                      rows="3" th:field="*{payerCompanyName}"></textarea>
+                            <input type="text" class="form-control" id="payerCompanyName" name="message"
+                                   placeholder="Наименование плательщика" rows="3" th:field="*{payerCompanyName}"/>
                         </div>
                     </div>
 
@@ -110,8 +117,8 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">Банк плательщика:</label>
                         <div class="col-md-9">
-                            <textarea class="form-control" id="payerBankName" name="message" placeholder="Реквизиты банка получателя"
-                                      rows="3" th:field="*{payerBankName}"></textarea>
+                            <input type="text" class="form-control" id="payerBankName" name="message"
+                                   placeholder="Реквизиты банка получателя" rows="3" th:field="*{payerBankName}"/>
                         </div>
                     </div>
 
@@ -152,10 +159,10 @@
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label">Плательщик:</label>
+                        <label class="col-md-3 control-label">Получатель:</label>
                         <div class="col-md-9">
-                            <textarea class="form-control" id="recipientCompanyName" name="message" placeholder="Наименование плательщика"
-                                      rows="3" th:field="*{recipientCompanyName}"></textarea>
+                            <input type="text" class="form-control" id="recipientCompanyName" name="message"
+                                   placeholder="Наименование плательщика" rows="3" th:field="*{recipientCompanyName}"/>
                         </div>
                     </div>
 
@@ -169,10 +176,10 @@
 
                     <!-- Text input-->
                     <div class="form-group">
-                        <label class="col-md-3 control-label">Банк плательщика:</label>
+                        <label class="col-md-3 control-label">Банк получателя:</label>
                         <div class="col-md-9">
-                            <textarea class="form-control" id="recipientBankName" name="message" placeholder="Реквизиты банка получателя"
-                                      rows="3" th:field="*{recipientBankName}"></textarea>
+                            <input type="text" class="form-control" id="recipientBankName" name="message"
+                                   placeholder="Реквизиты банка получателя" rows="3" th:field="*{recipientBankName}"/>
                         </div>
                     </div>
 
@@ -196,8 +203,8 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">Назначение платежа:</label>
                         <div class="col-md-9">
-                            <textarea class="form-control" id="paymentOrderPurpose" name="message" placeholder="Назначение платежа"
-                                      rows="3" th:field="*{paymentOrderPurpose}"></textarea>
+                            <input type="text" class="form-control" id="paymentOrderPurpose" name="message" placeholder="Назначение платежа"
+                                      rows="3" th:field="*{paymentOrderPurpose}"/>
                         </div>
                     </div>
 
@@ -220,9 +227,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="./dist/js/bootstrap.min.js"></script>
 <script src="./js/jquery-3.2.1.min.js" type="application/javascript"></script>
-<script src="./js/custom.js" type="application/javascript"></script>
+<script src="./js/bootstrapvalidator.min.js" type="application/javascript"></script>
 <script src="./js/jquery.mask.js" type="application/javascript"></script>
-<script src="./js/jquery.validate.js" type="application/javascript"></script>
+<script src="./js/custom.js" type="application/javascript"></script>
+
+<!--<script src="./js/jquery.validate.js" type="application/javascript"></script>-->
 <!---<script src="./js/jquery.maskedinput.js" type="application/javascript"></script>-->
 </body>
 </html>
