--- a/src/main/resources/templates/invoicepage.html
+++ b/src/main/resources/templates/invoicepage.html
@@ -10,9 +10,9 @@
     <title>Image Header Template for Bootstrap</title>
     <link href="./dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="./dist/css/bootstrap-theme.min.css" rel="stylesheet"/>
-    <link href="./dist/css/bootstrapValidator.min.css" rel="stylesheet"/>
+    <!--<link href="./dist/css/bootstrapValidator.min.css" rel="stylesheet"/>-->
     <link href="./dist/css/header.css" rel="stylesheet"/>
-    <link href="./dist/css/style.css" rel="stylesheet"/>
+    <!--<link href="./dist/css/style.css" rel="stylesheet"/>-->
 </head>
 <body class="body-top">
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -84,22 +84,25 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Номер:</label>
                             <div class="col-md-9">
-                                <input type="text" id="documentNumber" placeholder="Номер счета" class="form-control" th:field="*{documentNumber}"/>
+                                <input type="text" id="documentNumber" placeholder="Номер счета" class="form-control"
+                                       th:field="*{documentNumber}"/>
                             </div>
                         </div>
 
                         <!-- Text input-->
                         <div class="form-group">
                             <label class="col-md-3 control-label">ИНН:</label>
-                            <div class="col-md-4">
-                                <input type="text" id="numberINN" placeholder="ИНН" class="form-control" th:field="*{numberINN}"/>
+                            <div class="col-md-9">
+                                <input type="text" id="numberINN" placeholder="ИНН" class="form-control"
+                                       th:field="*{numberINN}"/>
                             </div>
                         </div>
 
                         <div class="form-group">
                             <label class="col-md-3 control-label" >КПП:</label>
-                            <div class="col-md-4">
-                                <input type="text" id="numberKPP" placeholder="КПП" class="form-control" th:field="*{numberKPP}"/>
+                            <div class="col-md-9">
+                                <input type="text" id="numberKPP" placeholder="КПП" class="form-control"
+                                       th:field="*{numberKPP}"/>
                             </div>
                         </div>
 
@@ -107,8 +110,8 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Получатель средств:</label>
                             <div class="col-md-9">
-                            <input type="text" class="form-control" id="recipientName" name="message"
-                                   placeholder="Наименование получателя" rows="3" th:field="*{recipientName}"/>
+                            <textarea class="form-control" id="recipientName" name="recipientName"
+                                      placeholder="Наименование получателя" rows="3" th:field="*{recipientName}"></textarea>
                             </div>
                         </div>
 
@@ -116,8 +119,8 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Банк получателя:</label>
                             <div class="col-md-9">
-                            <input type="text" class="form-control" id="recipientNameBank" name="message" placeholder="Наименование банка получателя"
-                                      rows="3" th:field="*{recipientNameBank}"/>
+                            <textarea class="form-control" id="recipientNameBank" name="recipientNameBank"
+                                      placeholder="Наименование банка получателя" rows="3" th:field="*{recipientNameBank}"></textarea>
                             </div>
                         </div>
 
@@ -125,7 +128,8 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">БИК:</label>
                             <div class="col-md-9">
-                                <input type="text" placeholder="БИК" id="recipientBIKBank" class="form-control" th:field="*{recipientBIKBank}"/>
+                                <input type="text" placeholder="БИК" id="recipientBIKBank" class="form-control"
+                                       th:field="*{recipientBIKBank}"/>
                             </div>
                         </div>
 
@@ -150,8 +154,8 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Поставщик:</label>
                             <div class="col-md-9">
-                            <input type="text" class="form-control" id="providerName" name="message" placeholder="Поставщик описание"
-                                      rows="3" th:field="*{providerName}"/>
+                            <textarea class="form-control" id="providerName" name="providerName" placeholder="Поставщик описание"
+                                      rows="3" th:field="*{providerName}"></textarea>
                             </div>
                         </div>
 
@@ -159,8 +163,8 @@
                         <div class="form-group">
                             <label class="col-md-3 control-label">Покупатель:</label>
                             <div class="col-md-9">
-                            <input type="text" class="form-control" id="buyerName" name="message" placeholder="Покупатель описание"
-                                      rows="3" th:field="*{buyerName}"/>
+                            <textarea class="form-control" id="buyerName" name="buyerName" placeholder="Покупатель описание"
+                                      rows="3" th:field="*{buyerName}"></textarea>
                             </div>
                         </div>
 
@@ -205,7 +209,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="./dist/js/bootstrap.min.js"></script>
 <script src="./js/jquery-3.2.1.min.js" type="application/javascript"></script>
-<script src="./js/bootstrapvalidator.min.js" type="application/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.16.0/jquery.validate.min.js"></script>
 <script src="./js/jquery.mask.js" type="application/javascript"></script>
 <script src="./js/custom.js" type="application/javascript"></script>
 <!--<script src="./js/jquery.maskedinput.js" type="application/javascript"></script>-->
